--- a/css/main.css
+++ b/css/main.css
@@ -327,7 +327,7 @@
    
 }
 
-.section-destinations h1 {
+.section-destinations h2 {
     font-weight: bold;
     
 }
@@ -536,9 +536,12 @@
     .section-about img{
         width: 100%;
         height: 10%;
-        margin: 80px 0;
+        margin: 80px 0px;
        
     }
+ /* Destinations - Section*/
+    
+    
     
     /* Booking - Section*/
     .section-booking {
@@ -554,16 +557,21 @@
         height: 450px;
         width: 350px;
         margin: -100px -120px;
+        opacity: 1;
         
     }
     /* Blog - Section*/
 
+    .section-blog h3{
+        margin-top: 100px;
+    }
+
     .section-blog .card {
-        width: 350px;
+        width: 300px;
     }
 
     .section-blog  .blog-card-image {
-        height: 350px;
+        height: 300px;
         width: 100%;
        
     }
