Real text added to every section + small css fixes

--- a/css/hover.css
+++ b/css/hover.css
@@ -1264,7 +1264,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: #e27396;
+  background: #2ec4b6;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
   -webkit-transform-origin: 0 50%;
