--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,10 @@
     transition: 0.2s;
 }   
 
+.text a:hover{
+    letter-spacing: 4px;
+}
+
 .social {
     position: absolute;
     bottom: 20px;
@@ -657,3 +661,5 @@
     height: 100%;
 
   }
+
+}
